--- a/web_project/requirements.txt
+++ b/web_project/requirements.txt
@@ -1,13 +1,21 @@
+appdirs==1.4.3
 asgiref==3.2.3
 astroid==2.3.3
 colorama==0.4.3
-Django==3.0.3
+distlib==0.3.0
+Django==3.0.4
+django-environ-plus==0.0.3
+django-postgres-copy==2.4.2
+filelock==3.0.12
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+mysqlclient==1.4.6
 psycopg2==2.8.4
 pylint==2.4.4
 pytz==2019.3
 six==1.14.0
 sqlparse==0.3.0
+virtualenv==20.0.9
+virtualenvwrapper-win==1.2.6
 wrapt==1.11.2
