--- a/web_project/requirements.txt
+++ b/web_project/requirements.txt
@@ -3,19 +3,26 @@ asgiref==3.2.3
 astroid==2.3.3
 colorama==0.4.3
 distlib==0.3.0
+dj-database-url==0.5.0
 Django==3.0.4
-django-environ-plus==0.0.3
+django-heroku==0.3.1
 django-postgres-copy==2.4.2
+django-widget-tweaks==1.4.8
 filelock==3.0.12
 isort==4.3.21
 lazy-object-proxy==1.4.3
+Markdown==3.2.1
 mccabe==0.6.1
 mysqlclient==1.4.6
+Pillow==7.0.0
 psycopg2==2.8.4
 pylint==2.4.4
+python-decouple==3.3
 pytz==2019.3
 six==1.14.0
 sqlparse==0.3.0
+treepoem==3.3.1
 virtualenv==20.0.9
 virtualenvwrapper-win==1.2.6
+whitenoise==5.0.1
 wrapt==1.11.2
